# junior-backend-homework

./: .env.example  Cargo.toml  README.md
database/: ER-Diagram.mwb  ER-Diagram.mwb.bak
src/: main.rs
src/controllers/: file_controller.rs
src/dtos/: file_dto.rs
src/models/: file_model.rs
src/repositories/: file_repository.rs
src/s3_client/: mod.rs
src/services/: file_service.rs
