[package]
name = "junior-backend-homework"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket-multipart-form-data = "0.10.7"
serde = { version = "1.0.226", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-rustls", "chrono", "uuid"] }
aws-sdk-s3 = "1.106.0"
aws-config = "1.8.6"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
